# claude-redact

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  main.py  proxy.py  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  initialize.sh
.github/workflows/: publish-docker.yml
src/claude_proxy/: __init__.py  __main__.py  app.py  content.py  detection.py  logging_config.py  masking.py  recognizers.py  streaming.py
src/claude_redact/: __init__.py  __main__.py  app.py  bip39_wordlist.py  content.py  detection.py  generators.py  logging_config.py  masking.py  streaming.py
tests/: conftest.py  test_content.py  test_detection.py  test_masking.py  test_streaming.py
