[project]
name = "presidio-test"
version = "0.1.0"
description = "Claude HTTP reverse proxy with Presidio-based secret masking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_proxy"]
