[project]
name = "janus-proxy"
version = "0.1.0"
description = "Claude HTTP reverse proxy with regex-based secret masking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "phonenumbers>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
